--- a/client/login/index.html
+++ b/client/login/index.html
@@ -3,9 +3,9 @@
   <title>login</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="index.css" />
-  <script src="jquery-3.1.1.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="/copybox/assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <script src="/copybox/assets/js/jquery-3.1.1.min.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -22,6 +22,7 @@
     <br />
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
+  <script src="js/index.js" type="text/javascript"></script>
 </div> <!-- /container -->
 
 </body>
